--- a/PBSS/users/templates/users/logout.html
+++ b/PBSS/users/templates/users/logout.html
@@ -1,4 +1,4 @@
-{%  extends "users/dashboardbase.html" %}
+{%  extends "users/client.html" %}
 {% block content %}
     {% load static %}
     {% load crispy_forms_tags %}
@@ -8,7 +8,7 @@
     <div id="page-content" class="index-page">
             <section id="" class="box-content box-1" style="background: white;">
                 <div class="container">
-                     <div class="row heading">
+                     <div class="row heading" style="margin-top: 15%;">
                         <div class="col-lg-12">
 
                         </div>
