--- a/PBSS/form_fba/templates/fbaindex.html
+++ b/PBSS/form_fba/templates/fbaindex.html
@@ -31,7 +31,7 @@
 
             <div class="form-group row">
                 <div class="col-sm-12">
-                    <p style="margin-bottom: 2%;">Hello {{ user.username }}, Please Enter your details in FBA form.
+                    <p style="margin-bottom: 2%;">Hello <span style="font-weight:bold">{{ user.username }}, </span> Please Enter your details in FBA form.
                         Client name is {{ form.client_name }} </p>
                 </div>
             </div>
@@ -61,9 +61,21 @@
             <div class="form-group row">
                 <label class="col-sm-2 col-form-label">Intensity</label>
                 <div class="col-sm-4">{{ form.intensity }}</div>
-
             </div>
-
+            {% if form.errors %}
+                {% for field in form %}
+                    {% for error in field.errors %}
+                        <div class="alert alert-danger">
+                            <strong>{{ error|escape }}</strong>
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+                {% for error in form.non_field_errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endif %}
 
             <button type="submit" class="btn btn-primary">Save</button>
             <a class="btn btn-primary" href="{% url 'view' %}">History</a>
