--- a/PBSS/form_fba/templates/brview.html
+++ b/PBSS/form_fba/templates/brview.html
@@ -35,6 +35,15 @@
                 </div>
             </div>
 
+               {% if user.id == 28 %}
+            <div class="form-group row">
+                <div class="col-sm-12">
+                    <p style="margin-bottom: 2%;">Client visualization</p> <a class="btn btn-2 btn-lg" href="{% url 'chart' %}">Visualization</a>
+                </div>
+            </div>
+                {% else %}
+
+                    {% endif %}
     <div class="form-group row">
         <table class = "table table-striped table-bordered table-sm">
     <thead class="thead-dark">
